force-app/main/default/objects/PriceTable__c/PriceTable__c.object-meta.xml
<CustomObject>
    <label>価格管理</label>
    <nameField>
        <label>価格管理名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>