force-app/main/default/objects/PriceTable__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>価格管理 (荷主)</relationshipLabel>
    <relationshipName>PriceTableList</relationshipName>
    <type>Lookup</type>
</CustomField>