force-app/main/default/objects/PriceTable__c/fields/Active_F__c.field-meta.xml
<CustomField>
    <fullName>Active_F__c</fullName>
    <formula>IF(
    NewPriceTable__c != null &amp;&amp;
    NewPriceTable__r.CarryOutDate__c &gt;= TODAY() &amp;&amp;
    ISPICKVAL(NewPriceTable__r.Status__c, &quot;Approved&quot;),
    FALSE,
    IF (
    Account__c != null
    , IF(
        Text(PriceTableType__c) = &quot;StorageFee&quot;
        , Active__c
        , NOT(Account__r.DeliveryContractTermination__c) &amp;&amp; Active__c
    )
    , Active__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>有効</label>
    <type>Checkbox</type>
</CustomField>