force-app/main/default/objects/PriceTable__c/fields/CanInvoiceActualCostFlag__c.field-meta.xml
<CustomField>
    <fullName>CanInvoiceActualCostFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>荷主への実費請求可能</label>
    <type>Checkbox</type>
</CustomField>