force-app/main/default/objects/PriceTable__c/fields/CanPayActualCostFlag__c.field-meta.xml
<CustomField>
    <fullName>CanPayActualCostFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>下請け業者へ実費精算</label>
    <type>Checkbox</type>
</CustomField>