force-app/main/default/objects/PriceTable__c/fields/CarryOutDate__c.field-meta.xml
<CustomField>
    <fullName>CarryOutDate__c</fullName>
    <label>適用開始日</label>
    <type>Date</type>
</CustomField>