force-app/main/default/objects/PriceTable__c/fields/EstimateDate__c.field-meta.xml
<CustomField>
    <fullName>EstimateDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>見積書記載日付</label>
    <type>Date</type>
</CustomField>