force-app/main/default/objects/PriceTable__c/fields/EstimateNumber__c.field-meta.xml
<CustomField>
    <fullName>EstimateNumber__c</fullName>
    <description>yyyymm-999の型</description>
    <label>見積番号</label>
    <length>80</length>
    <type>Text</type>
</CustomField>