force-app/main/default/objects/PriceTable__c/fields/EstimateTarget__c.field-meta.xml
<CustomField>
    <fullName>EstimateTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>見積書帳票対象</label>
    <type>Checkbox</type>
</CustomField>