force-app/main/default/objects/PriceTable__c/fields/NewPriceTable__c.field-meta.xml
<CustomField>
    <fullName>NewPriceTable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>新価格管理</label>
    <referenceTo>PriceTable__c</referenceTo>
    <relationshipLabel>価格管理 (新価格管理)</relationshipLabel>
    <relationshipName>PriceTableNewPriceTableList</relationshipName>
    <type>Lookup</type>
</CustomField>