force-app/main/default/objects/PriceTable__c/fields/OldPriceTable__c.field-meta.xml
<CustomField>
    <fullName>OldPriceTable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>旧価格管理</label>
    <referenceTo>PriceTable__c</referenceTo>
    <relationshipLabel>価格管理</relationshipLabel>
    <relationshipName>PriceTableOldPriceTableList</relationshipName>
    <type>Lookup</type>
</CustomField>