force-app/main/default/objects/PriceTable__c/fields/PriceTableType__c.field-meta.xml
<CustomField>
    <fullName>PriceTableType__c</fullName>
    <label>タイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charter</fullName>
                <label>チャーター便</label>
            </value>
            <value>
                <fullName>Small</fullName>
                <label>小口便</label>
            </value>
            <value>
                <fullName>Route</fullName>
                <label>路線便</label>
            </value>
            <value>
                <fullName>AccountTransfer</fullName>
                <label>荷主横持</label>
            </value>
            <value>
                <fullName>StorageFee</fullName>
                <label>保管料</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>