force-app/main/default/objects/PriceTable__c/fields/SequenceNumber_Max__c.field-meta.xml
<CustomField>
    <fullName>SequenceNumber_Max__c</fullName>
    <label>最大枝番</label>
    <summarizedField>ShippingFee__c.SequenceNumber__c</summarizedField>
    <summaryForeignKey>ShippingFee__c.PriceTable__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>