force-app/main/default/objects/PriceTable__c/fields/ServiceFee__c.field-meta.xml
<CustomField>
    <fullName>ServiceFee__c</fullName>
    <label>手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>