force-app/main/default/objects/PriceTable__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>作成中</label>
            </value>
            <value>
                <fullName>Revising</fullName>
                <label>修正中</label>
            </value>
            <value>
                <fullName>PendingApproval</fullName>
                <label>承認待ち</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>承認</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>却下</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>