force-app/main/default/objects/PriceTable__c/fields/Subcontractor1__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>特別下請け業者１</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>価格管理 (特別下請け業者)</relationshipLabel>
    <relationshipName>SSC_PriceTables</relationshipName>
    <type>Lookup</type>
</CustomField>