force-app/main/default/objects/PriceTable__c/fields/Subcontractor2__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>特別下請け業者２</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>価格管理 (特別下請け業者２)</relationshipLabel>
    <relationshipName>PriceTableSubcontractor2List</relationshipName>
    <type>Lookup</type>
</CustomField>