force-app/main/default/objects/PriceTable__c/fields/Subcontractor3__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>特別下請け業者３</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>価格管理 (特別下請け業者３)</relationshipLabel>
    <relationshipName>PriceTableSubcontractor3List</relationshipName>
    <type>Lookup</type>
</CustomField>