force-app/main/default/objects/PriceTable__c/fields/SubcontractorReductionFee__c.field-meta.xml
<CustomField>
    <fullName>SubcontractorReductionFee__c</fullName>
    <label>特別運賃差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>