force-app/main/default/objects/PriceTable__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>有効の場合：{取引先} + &quot;:&quot; + {実施日} + &quot;:&quot; + {タイプ}
無効の場合：{Id}</description>
    <externalId>true</externalId>
    <label>一意キー</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>