force-app/main/default/objects/PriceTable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>PriceTableType__c</columns>
    <columns>Status__c</columns>
    <columns>CarryOutDate__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>